# diatomic-py

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  Change Log  ChangeLog.txt  Hamiltonian.py  LICENSE  Output_multithreaded.py  README.md  README.rst  change log  example_magnetic_moment.py  pyproject.toml  setup.py  test_output.py
.github/workflows/: code_quality.yml  publish.yml  test-suite.yml
Example Scripts/: Example Calculations.ipynb  Output_multithreaded_DC.py  test_output.py  test_script.py
Example Scripts/.ipynb_checkpoints/: Example Calculations-checkpoint.ipynb
Example Scripts/Outputs/: EnergiesB_181.5G Nmax_3.csv  StatesB_181.5G Nmax_3.csv  TDMB_181.5G Nmax_3.csv
diatom/: Calculate.py  Hamiltonian.py  Legacy.py  Plotting.py  calculate.py  constants.py  hamiltonian.py  plotting.py  test_script.py
diatom.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
diatomic/: calculate.py  constants.py  hamiltonian.py  plotting.py
diatomic.egg-info/: PKG-INFO  SOURCES.txt
diatomic_py.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: conf.py  diatom.rst  diatomic.rst  index.rst  modules.rst  requirements.txt
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/source/: api.rst  conf.py  diatom.rst  index.rst  installation.rst  usage guide.rst
docs/source/diatomic/: calculate.rst  operators.rst  plotting.rst  systems.rst
example scripts/: example_ac_stark.py  example_dc.py  example_electric_moment.py  example_magnetic_moment.py  example_transition_plot.py  example_zeeman.py
examples/: 1065_pi_transitions.csv  1065_tweezer.py  ac_stark.py  ac_stark_circ.py  bichromatic_magic_tweezer.py  double_tweezer.py  double_tweezer_plot.py  double_tweezer_polarisations.py  label_mixing_warning.py  pi_time_opt_field.py  pi_time_opt_inten.py  pi_transitions.csv  readme_example.py  rigid_rotor_dc.py  sigma_transitions.csv  two_tweezer.py  zeeman.py
src/diatomic/: __init__.py  calculate.py  operators.py  plotting.py  systems.py
tests/: test_calculate.py  test_logging.py  test_operators.py
