[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "diatomic-py"
version = "2.0.0"
description = "A package for calculating rotational and hyperfine structure of singlet diatomic molecules."
readme = "README.rst"
license = {file = "LICENSE"}
authors = [
  {name = "Jake Blackmore", email = "j.a.blackmore@durham.ac.uk"},
  {name = "Tom Hepworth", email = "tom.hepworth@durham.ac.uk"},
]
keywords = ["quantum", "singlet", "diatomic", "molecules", "hyperfine", "hamiltonian"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent"
]
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "sympy",
  "scipy"
]

[project.optional-dependencies]
test = [
  "pytest"
]
plotting = [
  "matplotlib"
]
docs = [
  "sphinx",
  "sphinx-book-theme"
]
dev = [
  "diatomic-py[test]",
  "diatomic-py[docs]",
  "black",
  "pre-commit",
  "ruff",
]

[tool.ruff]
src = ["src"]
