[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "diatomic-py"
version = "2.1.0"
description = "A package for calculating rotational and hyperfine structure of singlet diatomic molecules."
readme = "README.rst"
license = {file = "LICENSE"}
authors = [
  {name = "Jake Blackmore", email = "j.a.blackmore@durham.ac.uk"},
  {name = "Tom Hepworth", email = "tom.hepworth@durham.ac.uk"},
]
keywords = ["quantum", "singlet", "diatomic", "molecules", "hyperfine", "hamiltonian"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent"
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.5",
    "scipy>=1.15.3",
    "sympy>=1.14.0",
]

[project.optional-dependencies]
plotting = [
  "matplotlib>=3.10.9",
]
progress = [
  "tqdm>=4.67.3"
]

[tool.ruff]
src = ["src"]

[dependency-groups]
test = [
  "pytest",
]
docs = [
  "matplotlib>=3.10.9",
  "sphinx",
  "sphinx-book-theme",
]
dev = [
  {include-group = "test"},
  {include-group = "docs"},
  "black>=26.3.1",
  "matplotlib>=3.10.9",
  "pre-commit",
  "ruff>=0.15.12",
  "tqdm>=4.67.3",
]
